@@ -1,8 +1,11 @@
 #!/usr/bin/env ruby
+require 'fileutils'
+
+FileUtils.cp "bin/fri", "bin/qri"
 
 if /win/ =~ RUBY_PLATFORM and /darwin|cygwin/ !~ RUBY_PLATFORM
-  require 'fileutils'
-  %w[fri fastri-server ri-emacs].each do |fname|
+  %w[fri qri fastri-server ri-emacs].each do |fname|
     FileUtils.mv "bin/#{fname}", "bin/#{fname}.rb", :force => true
   end
 end
+
