@@ -10,6 +10,7 @@ Features
   namespace and method name (-Of), and case-indep. variants.
 * --local (-L) and --remote (-L) (default) options. --local makes fri operate
   in standalone mode, without requiring fastri-server.
+* new executable: qri, equivalent to fri -L (local, standalone mode)
 * try to second-guess the correct method type if all search methods fail
   and the type was explicitly given
 
